Update Novaconomy.java
- Create Constants for Tags
- Exchange GUI Impl